# causal-constructivism

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
assets/scenes/: embodied_scientist.xml  minimal_blocks.xml
docs/: ARCHITECTURE.md  CODE_LANGUAGE_TRAINING.md  GITHUB_PUBLISHING.md  GPU_TRAINING.md  LOCAL_GPU_LEARNING.md
docs/demo-baseline/: README.md  phase01-active-mass.json  phase02-twin-world.json  (+17 more)
models/: local-trace-model.json
scripts/: build-code-corpus.ps1  run-cartographer.ps1  run-closedloop.ps1  run-code-language-training.ps1  run-collaborator.ps1  run-composer.ps1  run-curator.ps1  run-discovery.ps1  run-embodied.ps1  run-generalist.ps1  run-gpu-training.ps1  run-historian.ps1  run-integrator.ps1  run-mujoco.ps1  run-narrator.ps1  run-programmer.ps1  run-strategist.ps1  run-theorist.ps1  run-training.ps1  run-twin.ps1  run-universalist.ps1  run-website-builder.ps1  run.ps1  sample-code-language.ps1  test.ps1
tests/: test_agency.py  test_cartographer.py  test_code_corpus.py  test_collaborator.py  test_composer.py  test_contact_learning.py  test_counterfactual.py  test_curator.py  test_discovery.py  test_embodied_vision.py  test_generalist.py  test_gpu_training.py  test_graph.py  test_historian.py  test_inference.py  test_integrator.py  test_learning.py  test_mujoco_adapter.py  test_narrator.py  test_perception.py  test_persistence.py  test_programmer.py  test_strategist.py  test_system.py  test_theorist.py  test_training.py  test_twin_physics.py  test_universalist.py  test_website_builder.py
(+51 files in other folders)
